--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
+    
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     
+    "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
