--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build:css": "node scripts/generate-tailwind-safelist.mjs && tailwindcss -c tailwind.config.js -i styles/tailwind.css -o public/app.css --minify",
+    "predev": "npm run build:css",
+    "prebuild": "npm run build:css",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -13,10 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    
-    "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "@tailwindcss/cli": "^4.1.11",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
